gccida/g1/add_location_or_const_value_attribute
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/dwarf2out.c:9467:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8989, "add_location_or_const_value_attribute"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/dwarf2out.c:9514:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v9] != MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/dwarf2out.c:9515:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8722, "add_const_value_attribute"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/dwarf2out.c:9520:13: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etardouble( v11, *( realvaluetype *)&v5[1]); 
            ^~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/real.h:164:49: note: passing argument to parameter here
extern void etardouble          PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/dwarf2out.c:9532:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8713, "add_const_value_attribute"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/dwarf2out.c:9536:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v20.r[2] = ( __int64)v5[2]; 
                     ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/dwarf2out.c:9538:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v20.r[0] = ( __int64)v5[1]; 
                     ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/dwarf2out.c:9540:14: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etartdouble( v11, v20); 
             ^~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/real.h:162:50: note: passing argument to parameter here
extern void etartdouble         PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/dwarf2out.c:9542:14: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etarldouble( v11, v20); 
             ^~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/real.h:163:50: note: passing argument to parameter here
extern void etarldouble         PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/dwarf2out.c:9601:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8757, "add_const_value_attribute"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/dwarf2out.c:9613:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9026, "add_location_or_const_value_attribute"); 
                             ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_location_or_const_value_attribute/src/obj/dwarf2out.o] Error 1
